{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 5,
  "lineage": "3128487f-88ff-7234-fa7b-1e0c46b974fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mumbai_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a289b56122fa70e8",
            "arn": "arn:aws:ec2:ap-south-1:712416034081:instance/i-07a3f5a5cc21083bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a3f5a5cc21083bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ac29f91e53dc4a5",
            "private_dns": "ip-172-31-39-33.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.33",
            "public_dns": "ec2-13-235-50-210.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.50.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05034ac5e321979b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-sg-mumbai"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021b84620085514aa",
            "tags": {
              "Name": "Mumbai-Nginx-Server"
            },
            "tags_all": {
              "Name": "Mumbai-Nginx-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b5fd239e2d858a5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg_mumbai",
            "data.aws_ssm_parameter.al2_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "singapore_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebd9f95df7060b3",
            "arn": "arn:aws:ec2:ap-southeast-1:712416034081:instance/i-0a641e9802922eefd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a641e9802922eefd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e63706cc8b951d1",
            "private_dns": "ip-172-31-46-48.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.48",
            "public_dns": "ec2-47-128-78-62.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.78.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f15779ebe993eb4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-sg-singapore"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0391e7adbfb8b5d49",
            "tags": {
              "Name": "Singapore-Nginx-Server"
            },
            "tags_all": {
              "Name": "Singapore-Nginx-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc53052493cadced"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg_singapore",
            "data.aws_ssm_parameter.al2_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:712416034081:security-group/sg-05b5fd239e2d858a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b5fd239e2d858a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg-mumbai",
            "name_prefix": "",
            "owner_id": "712416034081",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066b44f4a4843cd32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712416034081:security-group/sg-0cc53052493cadced",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc53052493cadced",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg-singapore",
            "name_prefix": "",
            "owner_id": "712416034081",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044ff2e3ab197f195"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}